[package]
name = "rsafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
anyhow = "1.0.58"
blake2 = "0.10.4"
clap = "3.2.8"
csv = "1.1.6"
ngrammatic = "0.4.0"
rpassword = "6.0.1"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
